# lulezojne

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml  flake.nix  justfile
.helix/: languages.toml
src/: args.rs  config.rs  main.rs  plop.rs  print.rs
src/color/: accessibility.rs  analysis.rs  component.rs  extraction.rs  factor.rs  mod.rs  serialization.rs
src/colors/: colorthief.rs  kmeans.rs  kmeans_gpu.rs  median_cut.rs  mod.rs  neoquant.rs  prominent.rs  scolorq.rs
src/extract/: colorthief.rs  kmeans.rs  kmeans_gpu.rs  median_cut.rs  mod.rs  neoquant.rs  scolorq.rs
src/extrapolate/: ansi.rs  bootstrap.rs  mod.rs
src/plop/: helpers.rs  mod.rs
src/plop/helpers/: hex.rs  mod.rs  rgba.rs
src/print/: grid.rs  list.rs  mod.rs
