[package]
authors = [ "Haras" ]
name = "lulezojne"
description = "Image to ANSI color converter heavily inspired by lule"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/haras-unicorn/lulezojne"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
clap = { version = "4.4.3", features = ["derive"] }
color-thief = "0.2.2"
color_quant = "1.1.0"
colored = "2.0.4"
directories = "5.0.1"
handlebars = "4.4.0"
image = "0.24.7"
iris-lib = { version = "0.1.0", features = ["image"] }
itertools = "0.11.0"
kmeans-color-gpu = "0.1.0"
kmeans_colors = { version = "0.6.0", features = ["palette_color"] }
lazy_static = "1.4.0"
num-traits = "0.2.17"
num_cpus = "1.16.0"
palette = { version = "0.7.3", features = ["serde"] }
rand = { version = "0.8.5", features = ["serde"] }
rayon = "1.7.0"
regex = "1.10.2"
rscolorq = { version = "0.2.0", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shellexpand = "3.1.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-scoped = "0.2.0"
toml = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
fs_extra = "1.3.0"
